new build file 2

--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -15,5 +15,16 @@ jobs:
 	  with:
 	    distribution: 'zulu' # See 'Supported distributions' for available options
 	    java-version: '17'
-	- run: cd src
-	- run: javac HelloWorldApp.java
+	- echo "Compiling the code..."
+	- mkdir bin
+	- cd src
+	    # The next step actually does the compile of all .java files in the org/gh directory
+    	- javac -d ../bin -classpath ../bin ./org/gh/*.java
+    
+    	- echo "Compile complete.  Now running code.  See output below"
+    	- cd ../bin
+
+	    # This next step runs the RunMe class
+    	- java -classpath . org.gh.RunMe
+
+    	- echo "Execution complete.  See output above"
