new build file 4

--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -13,8 +13,4 @@ jobs:
           with:
             distribution: 'zulu' # See 'Supported distributions' for available options
             java-version: '17'
-        - run: mkdir bin
-        - run: cd src
-        - run: javac -d ../bin -classpath ../bin ./org/gh/*.java
-        - run: cd ../bin
-        - run: java -classpath . org.gh.RunMe
+        - run: buildMe.sh
