--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -13,4 +13,4 @@ jobs:
           with:
             distribution: 'zulu' # See 'Supported distributions' for available options
             java-version: '17'
-        - run: buildMe.sh
+        - run: ./buildMe.sh
